# aiohttp_data_handler

./: .gitignore  README.md  TODO.md  setup.cfg  setup.py
aiohttp_data_handler/: websocket_handler.py
examples/: 01_simple.py  01_simple_server.py  02_simple_client.py
examples/model/: user.py
fastapi_data_handler/: __init__.py  websocket_handler.py
